# unibz-76088A-materials

2-basics/2-modularity/: README.md  main.c  spi_bus.c  temperature_sensor.c
2-basics/2-modularity/1-base/0/: main.c
2-basics/2-modularity/1-base/1/: main.c
2-basics/2-modularity/1-base/2/: main.c  spi_bus.c  temperature_sensor.c
2-basics/2-modularity/1-base/3/: main.c  spi_bus.c  temperature_sensor.c
2-basics/2-modularity/2-header-file/: README.md
2-basics/2-modularity/2-header-file/0/: main.c  spi_bus.c  temperature_sensor.c
2-basics/2-modularity/3-cmake/: README.md
2-basics/2-modularity/3-cmake/1/: CMakeLists.txt
2-basics/2-modularity/steps/1-base/: 1.patch  2.patch  3.patch  README.md
